--- a/style.css
+++ b/style.css
@@ -42,8 +42,12 @@ p {
 
 .navigation-links {
   display: flex;
-  margin-top: 40px;
+  margin: 25px 0;
   justify-content: center;
+}
+
+.name-font {
+  font-family: cursive;
 }
 
 .navigation-links a {
@@ -80,6 +84,7 @@ p {
 
 .container {
   max-width: 720px;
+  margin-top: 20px;
 }
 
 .about-paragraphs {
@@ -109,9 +114,37 @@ p {
 
 .container-links {
   margin-left: 20px;
+  @media (max-width: 576px) {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    max-width: 70%;
+  }
 }
 
 .img-fluid {
   max-width: 100%;
   height: auto;
+}
+
+.homepage-container img {
+  @media (max-width: 576px) {
+    display: none;
+  }
+}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 36px;
+  }
+  h2 {
+    font-size: 24px;
+  }
+  p {
+    font-size: 14px;
+    padding: 0 15px;
+  }
+  .email-link {
+    font-size: 16px;
+  }
 }
